# NPS-Prediction

./: pyproject.toml
Eda_analysis/: EDA.ipynb  data_inspection.py  multivariate_analysis.py  univariate_analysis.py
Notebooks/: feature_engineering_experiments.ipynb
config/: Paths.py  ingestor_config.py
data/silent/: silent_customers.csv
docs/: feature_doc.ipynb
src/: data_splitter.py  feature_engineering.py  handle_missing_value.py  ingest_data.py  outer_detection.py  preprocessing.py
