[project]
name = "nps-project-prediction"
version = "0.1.0"
description = "scalable, robust, reproductible models for the prediction of satisfication score"
authors = [
    {name = "beugre483", email = "beugreniamba904@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "mlflow>=3.11.1,<4.0.0",
    "xgboost>=3.2.0,<4.0.0",
    "numpy>=2.4.4,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "matplotlib>=3.10.0,<4.0.0",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
